--- a/index.html
+++ b/index.html
@@ -50,11 +50,17 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2><a >And this is <br />
+									About Me></a></h2>
+									<p>I am Udit Baliyan, currently pursuing a Bachelor of Computer Applications (BCA) at MSI. Born and raised in India, I have always been fascinated by the world of technology and programming.
+
+My passion for Computer Science stems from the joy I find in solving complex problems and creating innovative solutions. I am proficient in programming languages such as C and Python, and I am eager to develop my skills further.
+
+I have a keen interest in Web Development and Data Science, and I am constantly learning and working on projects to enhance my expertise in these fields. My goal is to specialize in these areas and contribute to exciting projects that make a difference.
+
+In my free time, I enjoy playing simulation games, reading articles, watching YouTube tutorials, traveling, and binge-watching series. I believe that with passion and determination, one can achieve success in any endeavor.
+
+</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
