--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">PROJECTS</a>
+						<a href="index.html" class="logo">DATA SCIENCE PROJECTS</a>
+
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="">PROJECTS</a></li>
+							<li class="active"><a href="index.html" class="logo">DATA SCIENCE PROJECTS</a></li>
+							<li class="active"><a href="WEB.html" class="logo">WEB PROJECTS</a></li>
+							<li class="active"><a href="DA.html" class="logo">DATA ANAYIST PROJECTS</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/udit-baliyan-ab1162260/" class="icon brands fa-linkedin" target="_blank"><span class="label" >linkedin</span></a></li>
@@ -47,103 +50,101 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									
-									<h2><a >And this is <br />
-									About Me></a></h2>
-									<p>I am Udit Baliyan, currently pursuing a Bachelor of Computer Applications (BCA) at MSI. Born and raised in India, I have always been fascinated by the world of technology and programming.
+						<article class="post featured">
+							<header class="major">
+								<h2><a href="https://github.com/uditbaliyan/Disease-Prediction" target="_blank">Breast Cancer<br>Detection</a></h2>
+							</header>
+							<a href="https://github.com/uditbaliyan/Disease-Prediction" target="_blank" class="image main"><img src="Images/breast cancer pic.png" alt="Breast Cancer Detection" /></a>
+							<ul class="actions special">
+								<li><a href="https://disease-prediction-ja23.onrender.com" target="_blank" class="button large">View Project</a></li>
+								<li><a href="ds/pre.htm" target="_blank" class="button large">Video Tutorial</a></li>
 
-My passion for Computer Science stems from the joy I find in solving complex problems and creating innovative solutions. I am proficient in programming languages such as C and Python, and I am eager to develop my skills further.
-
-I have a keen interest in Web Development and Data Science, and I am constantly learning and working on projects to enhance my expertise in these fields. My goal is to specialize in these areas and contribute to exciting projects that make a difference.
-
-In my free time, I enjoy playing simulation games, reading articles, watching YouTube tutorials, traveling, and binge-watching series. I believe that with passion and determination, one can achieve success in any endeavor.
-
-</p>
-								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="" class="button large">View Project</a></li>
-								</ul>
-							</article>
+					
+							</ul>
+						</article>
 
 						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-							</section>
+<!-- Posts -->
+<section class="posts">
 
+	<article class="post featured">
+		<header class="major">
+			<h2><a href="https://github.com/uditbaliyan/Disease-Prediction" target="_blank">Breast Cancer<br>Detection</a></h2>
+		</header>
+		<a href="https://github.com/uditbaliyan/Disease-Prediction" target="_blank" class="image main"><img src="Images/breast cancer pic.png" alt="Breast Cancer Detection" /></a>
+		<p>This project predicts the likelihood of breast cancer based on various health parameters </p>
+		<ul class="actions special">
+			<li><a href="https://disease-prediction-ja23.onrender.com" target="_blank" class="button large">View Project</a></li>
+			<li><a href="ds/pre.htm" target="_blank" class="button large">Video Tutorial</a></li>
+		
+		
+		</ul>
+	</article>
+	<article>
+		<header>
+			<h2><a href="https://github.com/uditbaliyan/Disease-Prediction" target="_blank">Heart Attack<br>Prediction</a></h2>
+		</header>
+		<a href="https://github.com/uditbaliyan/Disease-Prediction" target="_blank" class="image fit"><img src="Images/heart.png" alt="Heart Attack Prediction" /></a>
+		<p>This project predicts the likelihood of a heart attack based on various health parameters such as age, blood pressure, cholesterol levels, and more.</p>
+		<ul class="actions special">
+						<li><a href="ds/pre.htm" target="_blank" class="button large">Video Tutorial</a></li>
+
+			<li><a href="https://disease-prediction-ja23.onrender.com" target="_blank" class="button large">View Project</a></li>
+		</ul>
+	</article>
+
+	<article>
+		<header>
+			<h2><a href="https://github.com/uditbaliyan/Disease-Prediction" target="_blank">Diabetes<br>Prediction</a></h2>
+		</header>
+		<a href="https://github.com/uditbaliyan/Disease-Prediction" target="_blank" class="image fit"><img src="Images/dprediction.png" alt="Diabetes Prediction" /></a>
+		<p>This project predicts the likelihood of diabetes based on input features such as glucose levels, blood pressure, BMI, and more.</p>
+		<ul class="actions special">
+	<li><a href="ds/pre.htm" target="_blank" class="button large">Video Tutorial</a></li>
+			<li><a href="https://disease-prediction-ja23.onrender.com" target="_blank" class="button large">View Project</a></li>
+		</ul>
+	</article>
+
+	<article>
+		<header>
+			<h2><a href="https://github.com/uditbaliyan/Portfolio-Udit" target="_blank">Books Recommendation<br>System</a></h2>
+		</header>
+		<a href="https://github.com/uditbaliyan/Portfolio-Udit" target="_blank" class="image fit"><img src="Images/book_rec.png" alt="Books Recommendation System" /></a>
+		<p>This project recommends books to users based on their reading history and preferences.</p>
+		<ul class="actions special">
+			<li><a href="ds/rec_bk.htm" target="_blank" class="button large">Video Tutorial</a></li>
+			<li><a href="https://github.com/uditbaliyan/Portfolio-Udit" target="_blank" class="button large">View Project</a></li>
+		</ul>
+	</article>
+
+	<article>
+		<header>
+			<h2><a href="https://github.com/uditbaliyan/Portfolio-Udit" target="_blank">Movies Recommendation<br>System</a></h2>
+		</header>
+		<a href="https://github.com/uditbaliyan/Portfolio-Udit" target="_blank" class="image fit"><img src="Images/movie_rec.png" alt="Movies Recommendation System" /></a>
+		<p>This project recommends movies to users based on their viewing history and preferences.</p>
+		<ul class="actions special">
+	
+			<li><a href="ds/rec_bk copy.htm" target="_blank" class="button large">Video Tutorial</a></li>
+			<li><a href="https://github.com/uditbaliyan/Portfolio-Udit" target="_blank" class="button large">View Project</a></li>
+		</ul>
+	</article>
+
+	<article>
+		<header>
+			<h2><a href="https://github.com/uditbaliyan/Portfolio-Udit" target="_blank">Coursera Course<br>Recommendation System</a></h2>
+		</header>
+		<a href="https://github.com/uditbaliyan/Portfolio-Udit" target="_blank" class="image fit"><img src="Images/coursera.png" alt="Coursera Course Recommendation System" /></a>
+		<p>This project recommends Coursera courses to users based on their interests and learning history.</p>
+		<ul class="actions special">
+
+			<li><a href="ds/rec_bk copy 2.htm" target="_blank" class="button large">Video Tutorial</a></li>
+			<li><a href="https://github.com/uditbaliyan/Portfolio-Udit" target="_blank" class="button large">View Project</a></li>
+		</ul>
+	</article>
+</section>
+
+</div>
 						<!-- Footer -->
 
 
