added DA projects

--- a/DA.html
+++ b/DA.html
@@ -62,8 +62,7 @@
 		<a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 19-34-12.png" alt="Diabetes Prediction" /></a>
 		<p>This project predicts the likelihood of diabetes based on input features such as glucose levels, blood pressure, BMI, and more.</p>
 		<ul class="actions special">
-			<li><a href="" target="_blank" class="button large">Video Tutorial</a></li>
-<li><a href="DA/IPL.html" class="button large">View Project</a></li>
+
 		</ul>
 	</article>
 	<article class="post featured">
@@ -73,8 +72,7 @@
 		<a href="" class="image main"><img src="Images/Screenshot from 2024-07-26 19-42-38.png" alt="Breast Cancer Detection" /></a>
 		<p>This project predicts the likelihood of breast cancer based on various health parameters </p>
 		<ul class="actions special">
-			<li><a href="" target="_blank" class="button large">Video Tutorial</a></li>
-<li><a href="DA/Amazon.html" class="button large">View Project</a></li>
+			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
 		</ul>
 	</article>
 	<article>
@@ -84,8 +82,7 @@
 		<a href="#" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-03-48.png" alt="Heart Attack Prediction" /></a>
 		<p>This project predicts the likeihood of a heart attack based on various health parameters such as age, blood pressure, cholesterol levels, and more.</p>
 		<ul class="actions special">
-			<li><a href="" target="_blank" class="button large">Video Tutorial</a></li>
-<li><a href="DA/Diwali.html" class="button large">View Project</a></li>
+			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
 		</ul>
 	</article>
 
@@ -98,8 +95,7 @@
 		<a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-07-17.png" alt="Books Recommendation System" /></a>
 		<p>This project recommends books to users based on their reading history and preferences.</p>
 		<ul class="actions special">
-			<li><a href="" target="_blank" class="button large">Video Tutorial</a></li>
-<li><a href="DA/Movie.html" class="button large">View Project</a></li>
+			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
 		</ul>
 	</article>
 
@@ -110,8 +106,7 @@
 		<a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-08-06.png" alt="Movies Recommendation System" /></a>
 		<p>This project recommends movies to users based on their viewing history and preferences.</p>
 		<ul class="actions special">
-			<li><a href="" target="_blank" class="button large">Video Tutorial</a></li>
-<li><a href="DA/Startup.html" class="button large">View Project</a></li>
+			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
 		</ul>
 	</article>
 
@@ -122,8 +117,7 @@
 		<a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-08-43.png" alt="Coursera Course Recommendation System" /></a>
 		<p>This project recommends Coursera courses to users based on their interests and learning history.</p>
 		<ul class="actions special">
-			<li><a href="" target="_blank" class="button large">Video Tutorial</a></li>
-<li><a href="DA/Titanic.html" class="button large">View Project</a></li>
+			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
 		</ul>
 	</article>
 </section>
