added DA projects

--- a/DA.html
+++ b/DA.html
@@ -61,7 +61,9 @@
 		</header>
 		<a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 19-34-12.png" alt="Diabetes Prediction" /></a>
 		<p>This project predicts the likelihood of diabetes based on input features such as glucose levels, blood pressure, BMI, and more.</p>
+		
 		<ul class="actions special">
+			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
 
 		</ul>
 	</article>
