--- a/DA.html
+++ b/DA.html
@@ -55,74 +55,72 @@
                     <!-- Posts -->
 <!-- Posts -->
 <section class="posts">
-	<article>
-		<header>
-			<h2><a href="">Exploratory Data Analysis<br>IPL</a></h2>
-		</header>
-		<a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 19-34-12.png" alt="Diabetes Prediction" /></a>
-		<p>This project predicts the likelihood of diabetes based on input features such as glucose levels, blood pressure, BMI, and more.</p>
-		
-		<ul class="actions special">
-			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
+    <article>
+        <header>
+            <h2><a href="">Exploratory Data Analysis<br>IPL</a></h2>
+        </header>
+        <a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 19-34-12.png" alt="IPL Data Analysis" /></a>
+        <p>This project analyzes the performance and trends in IPL matches, providing insights into team strategies and player statistics.</p>
+        
+        <ul class="actions special">
+            <li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
+        </ul>
+    </article>
+    <article class="post featured">
+        <header class="major">
+            <h2><a href="">Exploratory Data Analysis<br>Amazon</a></h2>
+        </header>
+        <a href="" class="image main"><img src="Images/Screenshot from 2024-07-26 19-42-38.png" alt="Amazon Data Analysis" /></a>
+        <p>This project explores customer reviews and sales data on Amazon to identify trends and patterns in consumer behavior.</p>
+        <ul class="actions special">
+            <li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
+        </ul>
+    </article>
+    <article>
+        <header>
+            <h2><a href="">Exploratory Data Analysis<br>Diwali Sales</a></h2>
+        </header>
+        <a href="#" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-03-48.png" alt="Diwali Sales Data Analysis" /></a>
+        <p>This project examines sales data during Diwali to understand purchasing trends and factors affecting sales performance.</p>
+        <ul class="actions special">
+            <li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
+        </ul>
+    </article>
 
-		</ul>
-	</article>
-	<article class="post featured">
-		<header class="major">
-			<h2><a href="">Exploratory Data Analysis<br>Amazon</a></h2>
-		</header>
-		<a href="" class="image main"><img src="Images/Screenshot from 2024-07-26 19-42-38.png" alt="Breast Cancer Detection" /></a>
-		<p>This project predicts the likelihood of breast cancer based on various health parameters </p>
-		<ul class="actions special">
-			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
-		</ul>
-	</article>
-	<article>
-		<header>
-			<h2><a href="">Exploratory Data Analysis<br>Diwali Sales</a></h2>
-		</header>
-		<a href="#" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-03-48.png" alt="Heart Attack Prediction" /></a>
-		<p>This project predicts the likeihood of a heart attack based on various health parameters such as age, blood pressure, cholesterol levels, and more.</p>
-		<ul class="actions special">
-			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
-		</ul>
-	</article>
+    <article>
+        <header>
+            <h2><a href="">Exploratory Data Analysis<br>Movie</a></h2>
+        </header>
+        <a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-07-17.png" alt="Movie Data Analysis" /></a>
+        <p>This project analyzes movie ratings and reviews to provide insights into popular genres and viewer preferences.</p>
+        <ul class="actions special">
+            <li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
+        </ul>
+    </article>
 
+    <article>
+        <header>
+            <h2><a href="">Exploratory Data Analysis<br>Startup</a></h2>
+        </header>
+        <a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-08-06.png" alt="Startup Data Analysis" /></a>
+        <p>This project investigates data from startup companies to uncover trends in funding, growth, and industry performance.</p>
+        <ul class="actions special">
+            <li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
+        </ul>
+    </article>
 
-
-	<article>
-		<header>
-			<h2><a href="">Exploratory Data Analysis<br>Movie</a></h2>
-		</header>
-		<a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-07-17.png" alt="Books Recommendation System" /></a>
-		<p>This project recommends books to users based on their reading history and preferences.</p>
-		<ul class="actions special">
-			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
-		</ul>
-	</article>
-
-	<article>
-		<header>
-			<h2><a href="">Exploratory Data Analysis<br>Startup</a></h2>
-		</header>
-		<a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-08-06.png" alt="Movies Recommendation System" /></a>
-		<p>This project recommends movies to users based on their viewing history and preferences.</p>
-		<ul class="actions special">
-			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
-		</ul>
-	</article>
-
-	<article>
-		<header>
-			<h2><a href="">Exploratory Data Analysis<br>Titanic</a></h2>
-		</header>
-		<a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-08-43.png" alt="Coursera Course Recommendation System" /></a>
-		<p>This project recommends Coursera courses to users based on their interests and learning history.</p>
-		<ul class="actions special">
-			<li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
-		</ul>
-	</article>
+    <article>
+        <header>
+            <h2><a href="">Exploratory Data Analysis<br>Titanic</a></h2>
+        </header>
+        <a href="" class="image fit"><img src="Images/Screenshot from 2024-07-26 20-08-43.png" alt="Titanic Data Analysis" /></a>
+        <p>This project explores the Titanic dataset to analyze factors influencing survival rates and patterns among passengers.</p>
+        <ul class="actions special">
+            <li><a href="https://github.com/uditbaliyan/DATA-ANALYSIS" target="_blank" class="button large">GitHub</a></li>
+        </ul>
+    </article>
 </section>
+
 		
                     <!-- Footer -->
                     
